--- a/lib/factoryplace_web/components/layouts/app.html.heex
+++ b/lib/factoryplace_web/components/layouts/app.html.heex
@@ -1,5 +1,8 @@
 <header class="px-4 sm:px-6 lg:px-8 bg-teal-600 text-white py-2">
-  <a href="/"><span class="font-bold">Factory Place</span></a>
+  <a href="/">
+    <img src="/favicon.ico" class="inline size-8 mr-4" />
+    <span class="font-bold">Factory Place </span>
+  </a>
   <span class="float-right">
     <%= for {href,title} <- [
     {~p"/posts/new","new"}
