--- a/lib/factoryplace_web/controllers/page_html/home.html.heex
+++ b/lib/factoryplace_web/controllers/page_html/home.html.heex
@@ -3,6 +3,7 @@
 <div :for={post <- @posts} class=" my-2 py-1">
   <span class="block w-full text-xl">
     <a href={post.url || ~p"/posts/#{post.id}"}>{post.title}</a>
+
     <%= if post.url do %>
       <% uri = URI.parse(post.url)
       host = "#{uri.scheme}://#{uri.host}" %>
@@ -12,6 +13,7 @@
 
   <span class="text-xs flex justify-start gap-1 ml-2 text-slate-400">
     <span class="">by <a class="text-teal-500" href="/">@drek</a></span>
+    <a href={~p"/posts/#{post.id}"}>({post.comments_count} comments)</a>
     <a href={~p"/posts/#{post.id}"} class="hover:text-red-800"> flag </a>
   </span>
 </div>
