--- a/lib/factoryplace_web/controllers/post_html/show.html.heex
+++ b/lib/factoryplace_web/controllers/post_html/show.html.heex
@@ -15,14 +15,14 @@
 <div :for={comment <- @comment_hierachy[nil]} class="border mt-2 mb-2">
   <p class="m-2">{comment.body}</p>
   <div class="mt-2 text-xs">
-    <span class="">by @drek</span>
+    <span class="">by {comment.user.username}</span>
     <a href={~p"/comments/#{comment}"}> reply</a>
   </div>
 
   <div :for={reply <- @comment_hierachy[comment.id] || []} class="border mt-2 mb-2 ml-4">
     <p class="m-2">{reply.body}</p>
     <div class="mt-2 text-xs">
-      <span class="">by @drek</span>
+      <span class="">by {reply.user.username}</span>
     </div>
   </div>
   <hr />
